# ayatana-indicator-display

./: .build.yml  .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  NEWS  README  README.md
cmake/: FindGMock.cmake
data/: 50-org.ayatana.indicator.display.AccountsService.pkla  50-org.ayatana.indicator.display.AccountsService.rules  CMakeLists.txt  ayatana-indicator-display.conf.in  ayatana-indicator-display.desktop.in  ayatana-indicator-display.service.in  com.canonical.indicator.display  indicator-display.conf.in  indicator-display.desktop.in  indicator-display.service.in  indicator-display.upstart.desktop.in  org.ayatana.display.gschema.xml  org.ayatana.display.gschema.xml.in  org.ayatana.indicator.display  org.ayatana.indicator.display.AccountsService.policy  org.ayatana.indicator.display.AccountsService.xml  org.ayatana.indicator.display.gschema.xml  org.ayatana.indicator.rotation_lock
debian/: ayatana-indicator-display.links  changelog  control  copyright  indicator-display.maintscript  postinst  rules
po/: CMakeLists.txt  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-display.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+98 more)
src/: CMakeLists.txt  adbd-client.cpp  adbd-client.h  dbus-names.h  exporter.cpp  exporter.h  greeter.cpp  greeter.h  indicator.cpp  indicator.h  main.cpp  rotation-lock.cpp  rotation-lock.h  service.cpp  service.h  solar.c  solar.h  usb-manager.cpp  usb-manager.h  usb-monitor.cpp  usb-monitor.h  usb-snap.cpp  usb-snap.h
tests/: CMakeLists.txt  adbd-client-test.cpp  adbd-server.h  ayatana.cfg  glib-fixture.h  gtestdbus-fixture.h  manual  test-hello-world.cpp  test-rotation-lock.cpp  usb-snap-test.cpp
tests/integration/: CMakeLists.txt  usb-manager-test.cpp
tests/unit/: CMakeLists.txt  adbd-client-test.cpp  greeter-test.cpp  rotation-lock-test.cpp  usb-snap-test.cpp
tests/utils/: CMakeLists.txt  adbd-server.h  dbus-types.h  glib-fixture.h  gtest-print-helpers.h  gtest-qt-print-helpers.h  mock-greeter.h  mock-greeter.py  mock-unity-greeter.py  mock-usb-monitor.h  qdbus-helpers.h  qmain.cpp  qt-fixture.h  test-dbus-fixture.h
